--- a/mobile.html
+++ b/mobile.html
@@ -54,9 +54,9 @@
   </head>
   <body>
     <div class='geojsonio'></div>
-    <div class='pad1 fillE bottom'>
+    <!-- <div class='pad1 fillE bottom'>
         <p>geojson.io mobile <span class='deemphasize'>(read-only)</span></p>
-    </div>
+    </div> -->
     <script src='lib/mapbox.js/latest/mapbox.js'></script>
     <script src='dist/lib.js'></script>
     <script src='data/data.js'></script>
